force-app/main/default/objects/Producto_de_envio__c/Producto_de_envio__c.object-meta.xml
<CustomObject>
    <label>Producto de envío</label>
    <nameField>
        <displayFormat>PDE-{0000}</displayFormat>
        <label>Nro de Producto de Envío</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Productos de envío</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>