force-app/main/default/objects/Producto_de_envio__c/fields/Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Cantidad__c</fullName>
    <label>Cantidad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>