force-app/main/default/objects/Producto_de_envio__c/fields/Envio_sin_cargo__c.field-meta.xml
<CustomField>
    <fullName>Envio_sin_cargo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Envío sin cargo</label>
    <referenceTo>Envio_sin_Cargo__c</referenceTo>
    <relationshipLabel>Productos de envío</relationshipLabel>
    <relationshipName>Productos_de_envio</relationshipName>
    <type>Lookup</type>
</CustomField>