force-app/main/default/objects/Producto_de_envio__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Formula</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El valor no existe o no coinciden los criterios de filtro.</errorMessage>
        <filterItems>
            <field>Product2.Producto_SAP__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Productos de envío</relationshipLabel>
    <relationshipName>Productos_de_envio</relationshipName>
    <type>Lookup</type>
</CustomField>