force-app/main/default/objects/Producto_de_envio__c/fields/Procesado__c.field-meta.xml
<CustomField>
    <fullName>Procesado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Procesado</label>
    <type>Checkbox</type>
</CustomField>