force-app/main/default/objects/Producto_de_envio__c/fields/ProductoActivo__c.field-meta.xml
<CustomField>
    <fullName>ProductoActivo__c</fullName>
    <formula>Formula__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductoActivo</label>
    <type>Checkbox</type>
</CustomField>